# storage/api-docs/api-docs.json
@@ -10,13 +10,13 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/users": {
+        "/api/v1/users": {
             "get": {
                 "tags": [
                     "UserController"
                 ],
                 "summary": "Display a listing of users",
-                "operationId": "566aed8efb436ca506e0ef51a032ecd9",
+                "operationId": "12e989554c281d650dff75443acabf54",
                 "parameters": [
                     {
                         "name": "page",
@@ -49,6 +49,68 @@
                                 }
                             }
                         }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "UserController"
+                ],
+                "summary": "Store a newly created user",
+                "operationId": "64da9b5a20fa4f20e947ed61b2bbb6da",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john.doe@example.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "User created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Validation error"
                     }
                 },
                 "security": [
@@ -58,13 +120,13 @@
                 ]
             }
         },
-        "/api/users/{user}": {
+        "/api/v1/users/{user}": {
             "get": {
                 "tags": [
                     "UserController"
                 ],
                 "summary": "Display the specified user",
-                "operationId": "f310aa35b9243239c65dbc8b8f4b135e",
+                "operationId": "919fd317e275a070bcadcf4874123e45",
                 "parameters": [
                     {
                         "name": "user",
@@ -87,8 +149,75 @@
                             }
                         }
                     },
+                    "403": {
+                        "description": "Forbidden"
+                    },
                     "404": {
                         "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "UserController"
+                ],
+                "summary": "Update the specified user",
+                "operationId": "df2f483fc27e7b42e89953bad0cf1485",
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": false,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "John Doe"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "john.doe@example.com"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "422": {
+                        "description": "Validation error"
                     }
                 },
                 "security": [
@@ -102,7 +231,7 @@
                     "UserController"
                 ],
                 "summary": "Delete the specified user",
-                "operationId": "cf641f0b739211ff3a1c21b1ef310591",
+                "operationId": "17c42665206652a0fd309e2f348f97ed",
                 "parameters": [
                     {
                         "name": "user",
@@ -131,8 +260,115 @@
                             }
                         }
                     },
+                    "403": {
+                        "description": "Forbidden"
+                    },
                     "404": {
                         "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/users/{user}/restore": {
+            "post": {
+                "tags": [
+                    "UserController"
+                ],
+                "summary": "Restore the specified soft-deleted user",
+                "operationId": "630f96fb759f4ef6817270e5cf4786df",
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User restored successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User restored successfully"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/UserResource"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/users/{user}/force-delete": {
+            "delete": {
+                "tags": [
+                    "UserController"
+                ],
+                "summary": "Permanently delete the specified user",
+                "operationId": "bc693371ae39aa8b8fb8ea96d7361e6f",
+                "parameters": [
+                    {
+                        "name": "user",
+                        "in": "path",
+                        "description": "User ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User permanently deleted successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User permanently deleted successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "422": {
+                        "description": "Active record cannot be force deleted"
                     }
                 },
                 "security": [
@@ -159,20 +395,19 @@
                         "properties": {
                             "first": {
                                 "type": "string",
-                                "example": "http://localhost/api/users?page=1"
+                                "example": "http://localhost/api/v1/users?page=1"
                             },
                             "last": {
                                 "type": "string",
-                                "example": "http://localhost/api/users?page=2"
+                                "example": "http://localhost/api/v1/users?page=2"
                             },
                             "prev": {
                                 "type": "string",
-                                "example": null,
-                                "nullable": true
+                                "example": "http://localhost/api/v1/users?page=1"
                             },
                             "next": {
                                 "type": "string",
-                                "example": "http://localhost/api/users?page=2"
+                                "example": "http://localhost/api/v1/users?page=2"
                             }
                         },
                         "type": "object"
@@ -197,7 +432,7 @@
                                     "properties": {
                                         "url": {
                                             "type": "string",
-                                            "example": "http://localhost/api/users?page=1"
+                                            "example": "http://localhost/api/v1/users?page=1"
                                         },
                                         "label": {
                                             "type": "string",
@@ -213,7 +448,7 @@
                             },
                             "path": {
                                 "type": "string",
-                                "example": "http://localhost/api/users"
+                                "example": "http://localhost/api/v1/users"
                             },
                             "per_page": {
                                 "type": "integer",
@@ -239,18 +474,15 @@
                 "properties": {
                     "id": {
                         "type": "integer",
-                        "example": 1,
-                        "nullable": false
+                        "example": 1
                     },
                     "name": {
                         "type": "string",
-                        "example": "John Doe",
-                        "nullable": false
+                        "example": "John Doe"
                     },
                     "email": {
                         "type": "string",
-                        "example": "john.doe@example.com",
-                        "nullable": false
+                        "example": "john.doe@example.com"
                     },
                     "created_at": {
                         "type": "string",
